final version for abgabe

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -5,6 +5,7 @@
 \begin{description}
 
 \item[3GPP] 3rd Generation Public Partnership Project
+\item[5QI] 5G QoS Identifier
 \item[AMF] Access and Mobility Management Function
 \item[CAKE] Common Applications Kept Enhanced 
 \item[CDF] Cumulative Distribution Function
@@ -67,5 +68,6 @@
 \item[WiFi] Wireless Fidelity
 \item[WLAN] Wireless Local Area Network
 \item[WSN] Wireless Sensor Network
+
 
 \end{description}
