--- a/backmatter/01_formats.tex
+++ b/backmatter/01_formats.tex
@@ -13,9 +13,9 @@ The messages which add new flows to the data plane contain the flow description 
 
 In the reverse direction, when the data plane nodes report to the control plane, the statistics reported include the paths' descriptions (source and destination IP addresses) as well as the number of packets and bytes received on that path. They also include the average jitter and latency experienced, both over the entire reporting period, and since the last message. Finally, the message are also sent with a list of the “sending" statistics. That is, the number of bytes and packets sent out on the WAN Connector's interfaces. Both the path and interface statistics are sent with three timestamps. One timestamp to describe the first packet sent or received during this reporting window, one to describe the last packet sent or received during that same reporting window, and a timestamp taken before the message itself was sent (the heartbeat timestamp).
 
-By including the “sending" statistics, the data plane is able to inform the control plane if an interface is being actively used. On the receiving side, if an interface has not received packets from the respective source in too long a time, then the control plane can infer complete link failure. This is crucial for the ability of the WAN Connector to switch all user traffic off of dead links. Once a link stats working again, the WAN Connector will detect this when it receives the periodically sent probe packets.
+By including the “sending" statistics, the data plane is able to inform the control plane if an interface is being actively used. On the receiving side, if no interface has received packets from the respective source in too long a time, then the control plane can infer complete link failure. This is crucial for the ability of the WAN Connector to switch all user traffic off of dead links. Once a link stats working again, the WAN Connector will detect this when it receives the periodically sent probe packets.
 
-In order to save space this message was edited for display so that it only contains messages about two of the available paths instead of all the paths.
+In order to save space the messages were edited for display. The flow decision message was shortened to just show two flows being added, and the statistics message was changed so that it only contains statistics about two of the available paths instead of all the paths.
 
 \clearpage
 
