--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -6,7 +6,7 @@
 \addcontentsline{toc}{section}{Acknowledgment}
 \section*{Acknowledgment}
 
-I would like to thank my unofficial advisor Hauke Buhr for his help, advice and support. I also thank my advisor Marius for his insights. Both they and Thomas provided excellent constructive feedback to me, for which I am grateful. I am also indebted to the rest team at Fraunhofer FOKUS for all of their help, especially Hemant Zope, Christian Scheich, and Aleksandar Yonchev. Lastly I would like to thank Prof. Dr.-Ing. habil. Falko Dressler and Prof. Dr. Zubow from whom I learned a lot, and whose courses I enjoyed immensely during my studies.
+I would like to thank my unofficial advisor Hauke Buhr for his help, advice and support. I also thank my advisor Marius for his insights. They and Thomas provided excellent constructive feedback to me, for which I am grateful. I am also indebted to the rest team at Fraunhofer FOKUS for all of their help, especially Hemant Zope, Christian Scheich, and Aleksandar Yonchev. Lastly I would like to thank Prof. Dr. Ing. habil. Falko Dressler and Prof. Dr. Zubow from whom I learned a lot, and whose courses I enjoyed immensely during my studies.
 
 \begin{flushright}
 NZ\\[1pc]
