--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -10,7 +10,7 @@ The dawn of 5G brings with it an increased focus on bespoke quality of service p
 
 This thesis presents an investigation into the use of multiple paths to provide deterministic backhaul in a geographically distributed 5G Campus deployment. In the course of this document a design and an implementation are presented that take a 5G flow's requirements and use knowledge collected about the available backhaul paths to calculate which path(s) to use, via a binary optimization equation. The proposed solution comprises both a control plane and a data plane component, as well as a traffic shaper. In addition, a deployment configuration designed specifically for use in geographically distributed Campus 5G Networks is described.
 
-This thesis' solution is investigated with respect to its ability to deterministically provide various network characteristics to traffic flows which require them. This investigation is performed on a custom testbed which emulates multiple links. The results do not present conclusive evidence for the solution's ability to provide determinism, but do show promise. The latency-based path switching is 80\% optimal, and the implementation is able to reduce the experienced delay. It fails to reduce jitter for jitter-sensitive flows, and needs to compromise throughput in order to provide reduced packet loss. However it is able to provide lower packet loss than even the Optimal Single Path Oracle, via its use of path switching and packet replication.
+This thesis' solution is investigated with respect to its ability to deterministically provide various network characteristics to traffic flows which require them. This investigation is performed on a custom testbed which emulates multiple links. The results do not present conclusive evidence for the solution's ability to provide determinism, but do show promise. The latency-based path switching is 80\% optimal, and the implementation is able to reduce the experienced delay. It fails to reduce jitter for jitter-sensitive flows, and needs to compromise throughput in order to provide reduced packet loss. However it is able to provide lower packet loss than even the optimal Single Path Oracle, via its use of path switching and packet replication.
 
 
 %%=========================================
