--- a/mainmatter/02_background.tex
+++ b/mainmatter/02_background.tex
@@ -11,9 +11,9 @@ To place this thesis in its proper academic and practical context, this chapter 
 
 For the sake of brevity, the full history of the development of mobile networks will be hugely condensed and simplified, and only the 5G architecture will be explained in depth.
 
-The defining characteristic of a mobile network is wireless connectivity. This enables the users to move around while remaining connected to the network, which stands in direct opposition to historical computer networks which were stationary and usually featured fixed connections between computers. A user in a mobile network must first detect and then connect to a Base Station, this process includes authentication and authorization. A user may be switched from one Base Station to another depending on the signal strength (this is referred to as a handover), and this is what enables the user to maintain a connection whilst moving across wide areas. In mobile networks which support IP traffic, the user will normally appear to remain behind a single IP address despite their mobility.
+The defining characteristic of a mobile network is wireless connectivity. This enables the users to move around while remaining connected to the network, which stands in direct opposition to historical computer networks which were stationary and usually featured fixed connections between computers. A user in a mobile network must first detect and then connect to a Base Station, this process includes authentication and authorization. A user may be switched from one Base Station to another depending on the signal strength (this is referred to as a handover), and this is what enables the user to maintain a connection whilst moving across wide areas. In mobile networks which support Internet Protocol (IP) traffic, the user will normally appear to remain behind a single IP address despite their mobility.
 
-All of the user's data sent to the network goes through the Base Station to which it is currently connected. At first this data was exclusively analog voice data, however over time newer versions of the mobile networking specifications have defined different types of data, and eventually defined support for Internet Protocol (IP) messages as well. Starting with 4G, mobile networks transitioned to an all IP architecture \cite{3gpp.36.300}. To support and manage user mobility and provide internet connectivity, today's mobile networks have a complex core network architecture where different Network Functions (NF's) are responsible for the different aspects of user management. This core network continues to evolve with each new specification.
+All of the user's data sent to the network goes through the Base Station to which it is currently connected. At first this data was exclusively analog voice data, however over time newer versions of the mobile networking specifications have defined different types of data, and eventually defined support for IP messages as well. Starting with 4G, mobile networks transitioned to an all IP architecture \cite{3gpp.36.300}. To support and manage user mobility and provide internet connectivity, today's mobile networks have a complex core network architecture where different Network Functions (NF's) are responsible for the different aspects of user management. This core network continues to evolve with each new specification.
 
 \begin{figure}[ht]
     \centering
@@ -24,7 +24,7 @@ All of the user's data sent to the network goes through the Base Station to whic
 
 Figure \ref{fig:core} shows a simplified version of the architecture of a 5G core network and how it is connects to the RAN, the user, and the internet. The figure does not include all of the Network Functions defined in the 5G specifications but shows a select few which will be briefly explained in following.
 
-The Access and Mobility Management Function (\textbf{AMF}) handles, among other things, the user registration (access authentication and authorization), connectivity management, and the control plane interface to the RAN. The reference point for interactions between the AMF and the RAN is called the N2 reference point. The reference point for interactions with the UE is N1. This is a purely logical interface, messages between the UE and the AMF actually have to physically go through the RAN.
+The Access and Mobility Management Function (\textbf{AMF}) handles, among other things, the user registration (access authentication and authorization), connectivity management, and the control plane interface to the RAN. The reference point for interactions between the AMF and the RAN is called the N2 reference point. The reference point for interactions with the UE is N1. This is a purely logical interface, messages between the UE and the AMF have to go through the RAN.
 
 The User Plane Function (\textbf{UPF}) is responsible for forwarding packets between the Data Network and the RAN. The UPF must also perform QoS enforcement, for example making sure users do not exceed the bandwidth limits of their subscription. The UPF communicates with the RAN over the N3 reference point. For this they utilize the GPRS Tunneling Protocol (GTP). GTP is a tunneling protocol designed for mobile networks. Packets originating in the RAN are contained in a GTP tunnel and must be de-capsulated by the UPF before being forwarded to the Data Network (DN). Packets in the opposite direction must have a GTP header added to them before they are sent to the RAN.
 
@@ -32,26 +32,26 @@ The Session Management Function (\textbf{SMF}) is responsible for session establ
 
 The Policy Control Function (\textbf{PCF}) provides policy rules to different Control Plane functions in order to enforce them. The SMF consults the PCF before informing the UPF what Quality of Service a given user should experience. The interactions between the SMF and the PCF go over the Service Based Interface (SBI). This is a logical interface which represents all of the different interactions between all of the Control Plane Network Functions. All communication on the SBI uses HTTP2.
 
-In the figure it can also be seen how the 5G Core (like the 4G Packet Core before it) splits the control plane and the user plane (or data plane). The network functions in the control plane co-ordinate to make decisions over how to orchestrate the user plane, while the components in the data plane are the ones forwarding the actual user traffic.
+In the figure it can also be seen how the 5G Core (like the 4G Packet Core before it) splits the control plane and the user plane (or data plane). The network functions in the control plane co-ordinate to make decisions over how to orchestrate the user plane, while the components in the data plane are the ones forwarding the actual user traffic. In this thesis the terms data plane and user plane will be used interchangeably.
 
 \subsection{5G and Campus Networks}
 
-In order to enable new industrial use cases, 5G campus networks may be deployed exclusively for users within a campus organization, and covering only a prescribed geographical area \cite{rischke20215g}. The deployment of such a network can be crucial for time-sensitive wireless communication, e.g. between robots, and the 5G specifications contain traffic classes and QoS requirements for delay-critical use cases \cite{3gpp.23.501}. This is done in order to make 5G a competitive, or even superior, option to WiFi in campus deployments \cite{walia20175g}.
+In order to enable new industrial use cases, 5G campus networks may be deployed exclusively for users within a campus organization, and covering only a prescribed geographical area \cite{rischke20215g}. The deployment of such a network can be crucial for time-sensitive wireless communication, e.g. between robots, and the 5G specifications contain traffic classes and QoS requirements specifically for delay-critical use cases \cite{3gpp.23.501}. This is done in order to make 5G a competitive, or even superior, option to WiFi in industrial campus deployments \cite{walia20175g}.
 
 There is lots of room for different deployment architectures for 5G campus and non-public networks (NPN's). In \cite{prados20215g} many of these architectures are discussed and investigated. In order to operate a 5G campus network, spectrum may need to be acquired, as well as 4G or 5G base stations, depending on the mode of operation- NSA (non-standalone: 4G Base Stations (eNodeB's) but a 5G Core Network) or SA (standalone: 5G Base Stations (gNB's) and a 5G Core Network). Furthermore, a 5G Core Network is required in order to manage the network. Since 5G places an increased focus on virtualization and flexibility of deployment, there are a litany of options for which network functions from the core to deploy, and where to deploy them.
 
-This thesis addresses specifically those campus network deployments which require backhaul to a core located off premises. Networks deployed in this fashion will typically feature a subset of the core's network functions deployed on premise. In the simplest case the only component on premise will be the RAN. A different deployment model may feature one UPF on site with a second UPF located in the core, and the backhaul takes place between the two UPF's. This thesis' WAN Connector will be designed to be able to backhaul IP traffic from the remote campus to the core, either between the RAN and the UPF, or between two UPF's.
+This thesis addresses specifically those campus network deployments which require backhaul to a core located off premises. Networks deployed in this fashion will typically feature a subset of the core's network functions deployed on premise. In the simplest case the only component on premise will be the RAN. A different deployment model may feature one UPF on site with a second UPF located in the core, and the backhaul takes place between the two UPF's (this is the example shown in figure \ref{fig:telco}). This thesis' WAN Connector will be designed to be able to backhaul IP traffic from the remote campus to the core, either between the RAN and the UPF, or between two UPF's.
 
 
 \subsection{Backhaul in 5G}
 
 The first hop from the user equipment (UE) into the mobile network occurs over the air, via wireless signals. This communication is between the UE and the Base Station. The network of different Base Stations is called the Radio Access Network (RAN). Once the user has transmitted its data to the RAN, the RAN is responsible for passing on the user's messages to the core network. The transport network between the RAN and the Core is the backhaul network, or “backbone" \cite{jaber20165g}. However the term backhaul can also be used to refer to the process of transporting data from the RAN back to the core.
 
-In light of the increased focus in 5G on enabling time sensitive industrial use cases, the authors in \cite{prados2021asynchronous} proposed a method for integrating asynchronous Time Sensitive Networking (TSN) into 5G backhauling. To achieve this their architecture uses an Asynchronous Traffic Shaper, which is crucial for integrating the time sensitive traffic with the regular traffic. Their solution also utilized frame replication for the delay critical flows defined in the 5G specifications (5G QoS Identifiers (5QIs) 82 through 85).
+In light of the increased focus in 5G on enabling industrial use cases, the authors in \cite{prados2021asynchronous} proposed a method for integrating asynchronous Time Sensitive Networking (TSN) into 5G backhauling. To achieve this, their architecture uses an Asynchronous Traffic Shaper, which is crucial for integrating the time sensitive traffic with the regular traffic. Their solution also performs frame replication for the delay critical flows defined in the 5G specifications (5QI's 82 through 85).
 
 The authors of \cite{jaber20165g} highlight the need for innovation in 5G backhaul provisioning. At present optic fibre backhaul is not available nationwide in Europe, and Fibre to the Home (FTTH) is scarce worldwide. Currently most backhaul networks are built with microwave links or fibre/copper based links. There has also been research \cite{seppanen2016multipath, saadat2018multipath} into using multipath routing within the context of millimeter Wave (mmWave) backhaul in order to increase both reliability and throughput.
 
-Another option for mobile backhaul is satellite constellation networks. Geostationary Orbit satellites (GEO satellites) appear motionless to observers from the ground, and thus provide consistent latency and jitter. However this comes at a cost, they are a large distance away from the earth and round trip times are routinely on the order of 400 to 500 milliseconds. Regardless, GEO satellites are still a crucial means for connectivity for remote regions and areas where it is not possible or very difficult to provide other means of backhaul. Recently, Low-Earth Orbit (LEO) satellite constellations have begun to emerge and represent a more appealing option due to their greatly reduced latencies when compared with GEO satellites \cite{deutschmann2022broadband}. The 3G Public Partnership Project (3GPP), who are behind the 5G specifications, have commissioned a technical report, TR 23.737 \cite{3gpp.23.737}, on possible architectures and integration scenarios for satellite backhaul in 5G. Furthermore, independent studies have also highlighted the usefulness of satellite backhaul for 5G, and identified it as a key enabler of some of the goals set for 5G \cite{artiga2016terrestrial}.
+Another option for mobile backhaul is satellite constellation networks. Geostationary Orbit satellites (GEO satellites) appear motionless to observers from the ground, and thus provide consistent latency and jitter. However this comes at a cost; they are a large distance away from the earth and round trip times are routinely on the order of 400 to 500 milliseconds. Regardless, GEO satellites are still a crucial means for connectivity for remote regions and areas where it is not possible or very difficult to provide other means of backhaul. Recently, Low-Earth Orbit (LEO) satellite constellations have begun to emerge and represent a more appealing option due to their greatly reduced latencies when compared with GEO satellites \cite{deutschmann2022broadband}. The 3G Public Partnership Project (3GPP), publishers 5G specifications, have commissioned a technical report, TR 23.737 \cite{3gpp.23.737}, on possible architectures and integration scenarios for satellite backhaul in 5G. Furthermore, independent studies have also highlighted the usefulness of satellite backhaul for 5G, and identified it as a key enabler of some of the goals set for 5G \cite{artiga2016terrestrial}.
 
 In light of the increased focus on using satellite backhaul, the technical report mentioned above identifies one scenario which pertains exactly to this thesis. The “key issue \#9" in the report: “multi connectivity with hybrid satellite/terrestrial backhaul". The report constructs a specific use case for hybrid backhaul. Consider Additive Layer Manufacturing (ALM) factories, wherein the command and monitoring systems for the automation of the factory require reactivity, and machines in the factory must download the ALM electronic files. This download process will saturate the network resources and requires high bandwidth, conversely the automation processes will need low latency and low bandwidth. In order to meet the different requirements of the two applications, the file transfer could be sent over the satellite backhaul, while the remote command and monitoring could take place over the terrestrial link. Precisely this kind of situation highlights the need for a deterministic multipath backhaul solution for 5G campus networks. Here, this thesis addresses the issue more generally, aiming to develop a system that can handle more backhaul options than just one terrestrial link and one satellite link.
 
@@ -62,13 +62,13 @@ At this point it becomes important to establish the definitions of two similar t
 
 This discussion ties into the difference between links (or interfaces) and paths. When two multihomed hosts are communicating, using the same outgoing link does not mean taking the same path. The same interface could be used to send packets with different destination IP addresses and then the packets would take different paths. It is only in the context of a multihomed host communicating with a host that only has one IP address, that selecting a different interface is the same as selecting a different path. In these cases alone, multihoming and multipathing are the same.
 
-With these definitions in hand, we will now review some of the existing literature to see what kinds of approaches have been taken to address problems similar to those of this thesis.
+With these definitions in hand, we will now review some of the existing literature to see what kinds of approaches have been taken to address problems similar to that of this thesis.
 
 \subsection{Collecting and/or Predicting Performance Metrics in a Multihomed Environment}
 
 In \cite{akella2008performance} the authors collected both passive metrics (looking at response times for outgoing packets), and active measurements (sending ICMP ping, or TCP SYN messages and measuring the response time). Using the passive measurements enabled their multihomed approach to perform well, but when using the active measurements the performance was even better. Crucially, the passive measurements worked better over larger sampling periods, because it took longer to get a full overview of all the possible routes, whereas the active sampling approach acquired it's measurements faster and was thus more effective over smaller sampling intervals.
 
-Considering this result, the solution developed in this work will therefore utilize forms of both active and passive measurements. All three metrics- packet loss, latency, and jitter- will be periodically measured in an active manner. The period over which to perform these measurements is also an important design decision for the WAN connector, and it will be a fixed value, which can be configured by the operator. The use of a fixed value is important in the context of a solution which aims to provide determinism, since traffic may often have hard requirements for the maximum tolerable latency, packet loss, or jitter, which a flow is allowed to experience within a given window. For example in the 5G QoS specifications the averaging window for non delay critical traffic is 2 seconds \cite{3gpp.23.501}.
+Considering this result, the solution developed in this work will therefore utilize forms of both active and passive measurements. All three metrics- packet loss, latency, and jitter- will be periodically measured in an active manner. The period over which to perform these measurements is also an important design decision for the WAN Connector, and it will be a fixed value, which can be configured by the operator. The use of a fixed value is important in the context of a solution which aims to provide determinism, since traffic may often have hard requirements for the maximum tolerable latency, packet loss, or jitter, which a flow is allowed to experience within a given window. For example in the 5G QoS specifications the averaging window for non delay critical traffic is 2 seconds \cite{3gpp.23.501}.
 
 For classical wired links in multihomed scenarios, \cite{tao2004exploring} have observed that one link will generally dominate with regards to latency, but with brief periods where other links' performance is superior. These same authors also note that with regards to packet loss there is far less prevalence of a “dominant" link, and generally the links will perform comparably. Packet loss is also a particularly difficult metric to measure, since most links are highly reliable and when they do experience packet loss it is in bursts \cite{tao2004exploring}. Wireless connections are usually less reliable and may experience more consistent rates of packet loss at the data link layer, however often this is opaque from the perspective of the higher layers and hard to perceive.
 
@@ -90,11 +90,7 @@ Lastly, we can look to the work in \cite{goldenberg2004optimizing}, which also a
 
 %Finally the last work which will be discussed is \ref{rodriguez2004mar}. In this work, the authors built a commuter mobile access router infrastructure which uses multiple wireless service providers. Much like the WSN examples this approach is a wireless multihomed device.
 
-\section{Determinism in Computer Networking}
-
-%\subsection{Quality of Service (QoS)}
-
-\subsection{Deterministic Networking Specification}
+\section{Deterministic Networking Specification}
 
 Whilst TSN is able to provide the desired reliability and timing that critical applications require, there is a need for this sort of support in networks which are too large to be classified as Local Area Networks (LANs) \cite{detnet-use-cases, detnet-problem-statement}. To this extent, Deterministic Networking aims to enable the migration of applications suited for TSN's to larger packet switched networks, while maintaining support for existing packet network applications over the same physical network \cite{detnet-problem-statement}.
 
@@ -102,7 +98,7 @@ In this thesis, “determinism" does not refer to the IETF DetNet Working Group'
 
 The Deterministic Networking Problem Statement contains certain requirements of the network as a whole. These are not possible for this thesis, which addresses backhaul over resources which are not controlled by the operator. The WAN Connector, once implemented, will only be able to select from the available backhaul connections, it has no control over their network. Beyond this however, the problem statement's definition of determinism can be used. This entails absolute guarantees of minimum and maximum latency as well as packet loss and jitter, and secondly the use of more than half of the network's bandwidth. The latter is a crucial aspect of the definition since it prohibits massive over-provisioning of resources, which is an inefficient solution.
 
-\subsection{Traffic Shaping, Fair Queuing, and Bufferbloat}
+\section{Traffic Shaping, Fair Queuing, and Bufferbloat}
 
 The DetNet Architecture specification \cite{detnet-arch} explicitly mentions the use of a traffic shaper to avoid contention loss, but also warns against causing bufferbloat by using oversized buffers while trying to prevent contention loss. This subsection explores what these are and what they entail.
 
