--- a/mainmatter/05_evaluation.tex
+++ b/mainmatter/05_evaluation.tex
@@ -11,7 +11,7 @@ This chapter reviews how the implementation from the previous chapter was tested
 
 \subsection{Testbed Setup}
 
-In order to evaluate the success of the proposed approach a multipath scenario with four links will be emulated and investigated. Each test will consist of two WAN connectors and the four emulated links going between them. The characteristics of the links will be changed during the tests. For each test a different property will be investigated: latency, packet loss, and jitter. The evaluations will be performed on a testbed consisting of four seperate host servers. Two of these servers will run as the originating and terminating WAN Connectors. One server will generate and measure traffic. In between the two WAN Connectors, the final server will act as the link emulator. This architecture is shown in figure \ref{fig:testbed}
+In order to evaluate the success of the proposed approach a multipath scenario with four links will be emulated and investigated. Each test will consist of two WAN Connectors and the four emulated links going between them. The characteristics of the links will be changed during the tests. For each test a different property will be investigated: latency, packet loss, and jitter. The evaluations will be performed on a testbed consisting of four separate host servers. Two of these servers will run as the originating and terminating WAN Connectors. One server will generate and measure traffic. In between the two WAN Connectors, the final server will act as the link emulator. This architecture is shown in figure \ref{fig:testbed}
 
 \begin{figure}[h]
     \centering
@@ -25,9 +25,9 @@ In figure \ref{fig:testbed}, the links between the servers are 1GB ethernet cabl
 The link emulation is done using the tc subsystem. First, a root Heirarchical Token Bucket (HTB) qdisc is established on the “downlink" and “uplink" interfaces of the link emulator. Secondly, the qdisc is given children classes, one class per emulated link. This allows one to establish bandwidth caps for each individual link being emulated. Within these HTB classes the root qdisc is a Network Emulator (NetEm) qdisc. The NetEm qdisc can be then configured to simulate characteristics such as latency, packet loss, and jitter.
 
 
-In order to make the emulation more realistic, the NetEm qdiscs will be adjusted periodically. This allows one to degrade or improve links over time, for example by increasing the latency or packet loss in frequent intervals, until it reaches a large value. It also more closely mimics the real-life behavior of WAN connections, which do experience changes in their characteristics over time.
+In order to make the emulation more realistic, the NetEm qdiscs will be adjusted periodically. This allows one to degrade or improve links over time, for example by increasing the latency or packet loss in frequent intervals, until it reaches a large value. It also more closely mimics the real-life behavior of WAN Connections, which do experience changes in their characteristics over time.
 
-For the purposes of evaluating the WAN connector, three series of experiments will be performed to isolate and investigate it's link switching capabilities. First, purely latency based link selection will be investigated; a flow will be defined with specific latency requirements and then the emulated links will have their latency repeatedly changed. Then the same will be done once with packet loss and once with jitter. In each of these scenarios the other two parameters will be held constant, so that the WAN Connector can be judged based on its ability to meet one of the latency, jitter, or packet loss requirements, without the other two requirements interfering. In order to approximate realistic scenarios these experiments will also be repeated once with background traffic that aims to saturate the link's capabilities.
+For the purposes of evaluating the WAN Connector, three series of experiments will be performed to isolate and investigate it's link switching capabilities. First, purely latency based link selection will be investigated; a flow will be defined with specific latency requirements and then the emulated links will have their latency repeatedly changed. Then the same will be done once with packet loss and once with jitter. In each of these scenarios the other two parameters will be held constant, so that the WAN Connector can be judged based on its ability to meet one of the latency, jitter, or packet loss requirements, without the other two requirements interfering. In order to approximate realistic scenarios these experiments will also be repeated once with background traffic that aims to saturate the link's capabilities.
 
 The data for the emulation used in all of these scenarios was obtained using the Satellite Constellation Network Emulator (SCNE) \footnote{https://connectivity.esa.int/projects/scne} from the European Space Agency. The default scenario is 24 hours long and consists of 288 satellites, 10 gateways (GW), and 50 user terminals (UT). The reason this data is used is twofold. Firstly, because LEO satellite links are likely to be the most common type of backhaul for geographically distributed 5G Campus Network deployments, and secondly, because LEO satellite connections are exceptionally more volatile than “regular" links \cite{deutschmann2022broadband} \cite{ma2023network}. By choosing to emulate more volatile links in the testbed, the WAN Connector experiences a more difficult test, and one can be assured that the real life performance in “normal" scenarios, is unlikely to be worse.
 
@@ -64,7 +64,7 @@ The first aspect with respect to which the WAN Connector is investigated is it's
 
 \subsection{Performance Compared to Single Links}
 
-In this experiment both the WAN Connector and the links themselves are measured. This is done to have a comparison between the performance of the WAN Connector and the baseline performance level, which is the best performing link. The minimum acceptable performance of any path switching application is to provide a better performance than the best single link. Otherwise it would be better to just select the best link, and not use the application, or the other links, at all.
+In this experiment both the WAN Connector and the links themselves are measured. This is done to have a comparison between the performance of the WAN Connector and the baseline performance level, which would be the best performing link. The minimum acceptable performance of any path switching application is to provide a better performance than the best single link. Otherwise it would be better to just select the best link, and not use the application, or the other links, at all.
 
 To give an idea of the best possible performance, the Oracle results are computed after the experiment.  The Oracle results are purely theoretical. For each packet, it is able to select the best path to forward on, based on that path's future characteristics. This approach is calculated by comparing the latency of each packet sent by the WAN Connector with the latency that that packet would have experienced on any of the other links. If the latency of the link chosen by the WAN Connector would be greater than the maximum acceptable delay for that flow, then the Oracle selects a different link with an acceptable latency (if one exists). Since it always picks an optimal path, the Oracle approach provides a hard upper bound on the best possible performance, and thus acts as a valuable comparison. It is important to note that the Oracle does not pick the path with the minimum latency, rather, it sticks with the WAN Connector's decision whenever that decision guarantees the latency bound, or there is no such decision is possible. Only if the WAN Connector's decision is wrong (the current path would give a latency that exceeds the bound, and there exists a different path which would provide latency below the bound), does the Oracle select a different path.
 
@@ -95,6 +95,8 @@ The results in the figures show that the WAN Connector is able to achieve a supe
 
 During this experiment, the same 100 packet per second flow from before is repeated, but background traffic is added. An iperf3 \footnote{https://iperf.fr/} test is run across the WAN Connector at the same time as the latency critical flow, and the background traffic is given the same latency requirements, so that the WAN Connector always schedules both flows to the same link. This ensures that whatever link is being used will be saturated. Latency performance during congestion is a crucial element of a deterministic backhaul solution. The WAN Connector's control plane only makes the decision about which link to forward on- it does not perform load balancing or prioritization. The data plane does not do this either, it implements a purely First In First Out (FIFO) approach to packet queuing. This decision was made because the burden of implementing an appropriate packet shaper, in addition to the other multipath calculations, is too significant for the purposes of this thesis, and because powerful traffic shaping implementations which can be integrated into this solution already exist.
 
+The latency performance of the links themselves under load is not tested, instead the test is run once when there is no traffic shaper installed ahead of the WAN Connector, and once with the tc-cake qdisc.
+
 \begin{figure}[h]
     \centering
         \includegraphics[height=0.66\textwidth,width=\textwidth]{fig/rrul_cdf.png}
@@ -106,7 +108,7 @@ Figure \ref{fig:rrul_cdf} neatly demonstrates why traffic shaping is an essentia
 
 \section{Reliability Based Path Switching}
 
-In the next scenario, to analyze the ability of the WAN Connector to achieve the required reliability of a given flow, the same test flows from before are run over the WAN Connector and the four outgoing links. However this time instead of varying the latency, the packet loss ratio of the link is changed. The SCNE emulation's data is used for the testbed once again. However since the emulation does not provide packet loss statistics on a per second basis, the latencies of all the different links in the simulation are used. For the emulation, these 51 values are looped over in 10 second increments. Each link is given a shuffled set of these 51 values. This means that the cumulative value of the packet loss experienced by all of the links is the same (2\%), but the instantaneous values will differ. To appropriately analyze this scenario the flow being backhauled over the WAN Connector is given a reliability threshold of 0.1\%. This is because in this scenario, where the existing links all provide an average of 2\% reliability, setting a lower threshold means that it becomes necessary to duplicate packets at some points, in order to achieve the required reliability. Afterwards, the experiment is repeated under load, just like during the latency investigations. For the reliability under load scenario a second iperf3 flow is run across the WAN Connector in order to saturate the link. Like before, this second flow is given the exact same requirements as the test flow, to ensure that they are always scheduled across the same link by the path selection algorithm.
+In the next scenario, to analyze the ability of the WAN Connector to achieve the required reliability of a given flow, the same test flows from before are run over the WAN Connector and the four outgoing links. However this time instead of varying the latency, the packet loss of the link is changed. The SCNE emulation's data is used for the testbed once again. However since the emulation does not provide packet loss statistics on a per second basis, the latencies of all the different links in the simulation are used. For the emulation, these 51 values are looped over in 10 second increments. Each link is given a shuffled set of these 51 values. This means that the cumulative value of the packet loss experienced by all of the links is the same (2\%), but the instantaneous values will differ. To appropriately analyze this scenario the flow being backhauled over the WAN Connector is given a reliability threshold of 0.1\%. This is because in this scenario, where the existing links all provide an average of 2\% reliability, setting a lower threshold means that it becomes necessary to duplicate packets at some points, in order to achieve the required reliability. Afterwards, the experiment is repeated under load, just like during the latency investigations. For the reliability under load scenario a second iperf3 flow is run across the WAN Connector in order to saturate the link. Like before, this second flow is given the exact same requirements as the test flow, to ensure that they are always scheduled across the same link by the path selection algorithm.
 
 Just like before, the results achievable by an Oracle are calculated.  This time the Oracle approach is defined as choosing, before forwarding any packet, the link with the lowest packet loss ratio. But, crucially, the Oracle is not allowed to duplicate flows across different links. The Oracle is not able to predict the loss of individual packets, it only knows the overall probability that a packet will be lost if it is sent on a given link, and it always selects the link with the lowest probability.
 
@@ -150,7 +152,7 @@ For the final analysis, the jitter must be investigated. For this purpose the si
 
 Since more than half of the link capacity is being used by the flows being sent on the links, the WAN Connector cannot be tested at the same time. Thus, to test the WAN Connector the emulation is repeated but with the flow only being sent over the WAN Connector. Lastly, the Oracle approach is calculated based on the simulation data. The Oracle approach, like before, displays the theoretical optimal performance. It chooses, at each point in time, the link with the lowest jitter. The cumulative distribution of the jitter experienced by the flows is plotted in figure \ref{fig:jitter_cdf}.
 
-As can be seen from the figure, the WAN Connector's performance is disappointing. It displays an inferior performance to two of the links. This means the path switching is actually causing a worse performance. This is most likely down to insufficient statistics causing poor path selection, because jitter statistics can't be gathered about other paths in this single flow scenario. The probe packets which are periodically sent out do not provide enough data points to accurately determine jitter. While they can give a sufficient baseline for latency calculations, as well as helping to determine if a link is dead or alive, their jitter measurements are not likely to provide a strong insight into the true nature of the link's jitter.
+As can be seen from the figure, the WAN Connector's performance is disappointing. It displays an inferior performance to two of the links. This means the path switching is actually making the performance worse. This is most likely down to insufficient statistics causing poor path selection, because jitter statistics can't be gathered about other paths in this single flow scenario. The probe packets which are periodically sent out do not provide enough data points to accurately determine jitter. While they can give a sufficient baseline for latency calculations, as well as helping to determine if a link is dead or alive, their jitter measurements are not likely to provide a strong insight into the true nature of the link's jitter.
 
 A final note about the plot in figure \ref{fig:jitter_cdf}. In the figure, link 2 actually performs better than the Oracle for most jitter values, before ultimately proving to have the greater maximum values. This occurs because the Oracle is based on the simulation data and not the measurements. Therefore there are more data points available for the link than for the Oracle, and the percentage of packets below a certain level of jitter is thus greater. However ultimately the maximum values experienced by the flow, during those times when the link experiences it's worst jitter, are worse than the Oracle approach's worst cases, and, as one would expect, the Oracle's CDF terminates before link 2.
 
