--- a/mainmatter/06_conclusion.tex
+++ b/mainmatter/06_conclusion.tex
@@ -31,7 +31,7 @@ Lastly, the probe packets, which are sent out periodically to measure each path,
 
 \subsubsection{Adjustments for Jitter}
 
-Another potential improvement would be to pass a “Time of Execution" field in the GTP header of packets of jitter-sensitive applications. This allows the receiving WAN connector to store packets if they have arrived too early, and, conversely, the Packet Ordering Function may use this field to determine that it is more important to forward the current packet now, than to wait for a missing packet. This store and forward approach, with the time of execution field, is one of the solutions mentioned in the Deterministic Networking specification and would be a sensible addition to this thesis' proposal.
+Another potential improvement would be to pass a “Time of Execution" field in the GTP header of packets of jitter-sensitive applications. This allows the receiving WAN Connector to store packets if they have arrived too early, and, conversely, the Packet Ordering Function may use this field to determine that it is more important to forward the current packet now, than to wait for a missing packet. This store and forward approach, with the time of execution field, is one of the solutions mentioned in the Deterministic Networking specification and would be a sensible addition to this thesis' proposal.
 
 Additionally, specifically for the LEO satellite case, the path selection could be adjusted to account for the periodic increases in latency which occur as the ground station's current satellite moves out of range and the next one comes into range. For example during this phase it might make sense to temporarily forward packets on a different path, or to enable the store and forward mechanism, before disabling it once the satellite handover has finished.
 
