--- a/backmatter/03_patch.tex
+++ b/backmatter/03_patch.tex
@@ -5,9 +5,9 @@
 \chapter{GTP Patch for the BPF Flow Dissector}
 \label{appendix:patch}
 
-As was mentioned in the Design chapter (\ref{cha:design}), in a real 5G Campus deployment the messages between the UPF (or RAN) and the WAN Connector will be carrying GTP packets. Because GTP encapsulates messages inside a UDP message, the linux kernel will think that all GTP belong to the same flow, when in actuality they may be tunneling multiple different flows. In order for the tc-cake traffic shaper in the linux kernel to be able to detect the packets being tunneled, a custom BPF flow dissector must be used \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}.
+As was mentioned in the Design chapter (\ref{cha:design}), in a real 5G Campus deployment the messages between the UPF (or RAN) and the WAN Connector will be carrying GTP packets. Because GTP encapsulates messages inside a UDP message, the linux kernel will think that all GTP belong to the same flow, when in actuality they may be tunneling multiple different flows. In order for the tc-cake traffic shaper in the linux kernel to be able to detect the packets being tunneled, a custom BPF flow dissector must be loaded \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}.
 
-The linux kernel's source code provides a simple example of a dissector which removes the tunnel headers for various protocols, e.g. Generic Routing Encapsulation (GRE) or IP in IP tunneling (IPIP). Unfortunately a GTP dissector is not included in this set, but it is a straightforward patch to add it.
+The linux kernel's source code provides a simple example of such a dissector which removes the tunnel headers for various protocols, e.g. Generic Routing Encapsulation (GRE) or IP in IP tunneling (IPIP). Unfortunately a GTP dissector is not included in this set, but it is a straightforward patch to add it to that set.
 
 The listing \ref{lst:patch} shows a patch for the example file included in the linux kernel \footnote{https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/tree/tools/testing/selftests/bpf/progs/bpf\_flow.c}, the patch is for commit 3006adf3be79cde4d14b1800b963b82b6e5572e0 on the linux master branch. This patch constitutes an important part of this thesis' contribution because without it, a realistic deployment of the proposed system would not be possible, because the traffic shaper would not be able to peek inside the GTP tunnel.
 
